-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.10.0 Beta 2
-
None
-
watchOS
-
467cede61e1bd8754d1e4df0fc2f281ee9082f18
Continuous Integration: Failed
Module "qt/qtbase" (7bbb9a8ce81653b1665c9c942cc707ce98f611c5) did not compile: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -c -Xarch_armv7k -include.pch/debug/Qt5Gui_debug/c++_armv7k -Xarch_i386 -include.pch/debug/Qt5Gui_debug/c++_i386 -pipe -stdlib=libc++ -g -fPIC -std=c++1z -fapplication-extension -arch armv7k -arch i386 -Xarch_armv7k -mwatchos-version-min=3.0 -Xarch_armv7k -isysroot/Applications/Xcode.app/Contents/Developer/Platforms/WatchOS.platform/Developer/SDKs/WatchOS3.2.sdk -Xarch_i386 -mwatchos-simulator-version-min=3.0 -Xarch_i386 -isysroot/Applications/Xcode.app/Contents/Developer/Platforms/WatchSimulator.platform/Developer/SDKs/WatchSimulator3.2.sdk -fobjc-nonfragile-abi -fobjc-legacy-dispatch -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -fembed-bitcode-marker -Wall -W -DQT_COMPILER_SUPPORTS_SSE2 -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_GUI_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_CORE_LIB -I. -I../../mkspecs/common/uikit -I../../include -I../../include/QtGui -I../../include/QtGui/5.10.0 -I../../include/QtGui/5.10.0/QtGui -I../../include/QtCore/5.10.0 -I../../include/QtCore/5.10.0/QtCore -I../../include/QtCore -I.moc/debug -I../3rdparty/libpng -I../3rdparty/harfbuzz-ng/include -I../../mkspecs/macx-watchos-clang -o .obj/debug/qwindow.o kernel/qwindow.cpp kernel/qwindow.cpp:2639:12: error: use of undeclared identifier 'qt_gl_global_share_context' make[3]: *** [.obj/debug/qwindow.o] Error 1 make[2]: *** [debug-all] Error 2 kernel/qwindow.cpp:2639:12: error: use of undeclared identifier 'qt_gl_global_share_context' make[3]: *** [.obj/release/qwindow.o] Error 1 make[2]: *** [release-all] Error 2 make[1]: *** [sub-gui-make_first] Error 2 make: *** [sub-src-make_first] Error 2
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1507248391
Tested changes (refs/builds/qtci/5.10/1507248390):
https://codereview.qt-project.org/#/q/df1d4289e293f4946cd99ea762f8a75c7035456f,n,z Update submodules on '5.10' in qt5