src/gui/kernel/qwindow.cpp
@@ -2634,10 +2634,12 @@ QWindow *QWindowPrivate::topLevelWindow() const
     return window;
 }
 
+#if QT_CONFIG(opengl)
 QOpenGLContext *QWindowPrivate::shareContext() const
 {
     return qt_gl_global_share_context();
 };
+#endif
 
 /*!
     Creates a local representation of a window created by another process or by
