src/gui/kernel/qwindow_p.h
@@ -130,7 +130,9 @@ public:
 
     QWindow *topLevelWindow() const;
 
+#if QT_CONFIG(opengl)
     virtual QOpenGLContext *shareContext() const;
+#endif
 
     virtual QWindow *eventReceiver() { Q_Q(QWindow); return q; }
 
